deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app
        image: webapp:1
        # for local development against minikube registry
        #imagePullPolicy: Never        
        ports:
        - containerPort: 8080
        resources:
           limits:
             memory: 32Mi
             cpu: 125m
           requests:
             memory: 32Mi
             cpu: 125m
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 8080
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: chat-app
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service-cip
  labels:
    app: chat-app
spec:
  type: ClusterIP
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 8080
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: chat-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chat-ingress
spec:
  rules:
  - host: chat-app.cluster-ingress-subdomain
    http:
      paths:
      - backend:
          serviceName: chat-service-cip
          servicePort: 80
        path: /
  tls:
  - hosts:
    - chat-app.cluster-ingress-subdomain
    secretName: cluster-ingress-secret
